# cloudsecrets-gcp

./: .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
cloudsecrets_gcp/: env.py  file.py  gcp.py
cloudsecrets_gcp/cli/: __init__.py
tests/unit/: test_env_library.py  test_file_library.py  test_gcp_library.py
