[tool.poetry]
name = "cloudsecrets"
version = "0.2.0"
description = "Python tool for accessing mozilla cloud secrets"
authors = ["Adam Frank <afrank@mozilla.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
google-cloud-secret-manager = "*"
simplejson = "*"
tox = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cloud-secrets = "cloudsecrets.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
